--- a/src/assets/templates/head.mustache
+++ b/src/assets/templates/head.mustache
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
   <link rel="stylesheet" href="assets/css/vendors/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.min.css">
-  {{! <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png"> }}
   <title>{{head.title}}</title>
 </head>
 
